[gd_scene load_steps=3 format=3 uid="uid://work_hub_scene"]

[ext_resource type="Script" path="res://scripts/work/work_hub.gd" id="1_work_hub"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_terminal"]
size = Vector2(120, 80)

[node name="WorkHub" type="Node2D"]
script = ExtResource("1_work_hub")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.92, 0.92, 0.95, 1)

[node name="Floor" type="ColorRect" parent="."]
offset_left = 0.0
offset_top = 500.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.85, 0.85, 0.88, 1)

[node name="GridPattern" type="ColorRect" parent="Floor"]
offset_left = 0.0
offset_top = 0.0
offset_right = 1280.0
offset_bottom = 10.0
color = Color(0.8, 0.8, 0.83, 1)

[node name="BackWall" type="ColorRect" parent="."]
offset_left = 0.0
offset_top = 100.0
offset_right = 1280.0
offset_bottom = 500.0
color = Color(0.88, 0.88, 0.91, 1)

[node name="Desk" type="ColorRect" parent="."]
offset_left = 440.0
offset_top = 380.0
offset_right = 840.0
offset_bottom = 480.0
color = Color(0.6, 0.6, 0.65, 1)

[node name="DeskTop" type="ColorRect" parent="Desk"]
offset_left = -10.0
offset_top = -10.0
offset_right = 410.0
offset_bottom = 10.0
color = Color(0.7, 0.7, 0.75, 1)

[node name="Terminal" type="ColorRect" parent="."]
offset_left = 560.0
offset_top = 280.0
offset_right = 720.0
offset_bottom = 380.0
color = Color(0.3, 0.3, 0.35, 1)

[node name="Screen" type="ColorRect" parent="Terminal"]
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 80.0
color = Color(0.2, 0.8, 0.4, 1)

[node name="ScreenText" type="Label" parent="Terminal/Screen"]
layout_mode = 0
offset_left = 5.0
offset_top = 20.0
offset_right = 135.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.1, 0.3, 0.1, 1)
theme_override_font_sizes/font_size = 12
text = "READY"
horizontal_alignment = 1

[node name="Chair" type="ColorRect" parent="."]
offset_left = 580.0
offset_top = 450.0
offset_right = 700.0
offset_bottom = 550.0
color = Color(0.4, 0.4, 0.45, 1)

[node name="ChairBack" type="ColorRect" parent="Chair"]
offset_left = 10.0
offset_top = -60.0
offset_right = 110.0
offset_bottom = 10.0
color = Color(0.35, 0.35, 0.4, 1)

[node name="Player" type="ColorRect" parent="."]
offset_left = 590.0
offset_top = 400.0
offset_right = 690.0
offset_bottom = 500.0
color = Color(0.9, 0.7, 0.5, 1)

[node name="PlayerHead" type="ColorRect" parent="Player"]
offset_left = 20.0
offset_top = -40.0
offset_right = 80.0
offset_bottom = 10.0
color = Color(0.95, 0.8, 0.65, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InteractionPanel" type="Panel" parent="UI"]
offset_left = 440.0
offset_top = 550.0
offset_right = 840.0
offset_bottom = 680.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InteractionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StartWorkButton" type="Button" parent="UI/InteractionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Start Work"

[node name="LogOffButton" type="Button" parent="UI/InteractionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Log Off"

[node name="DayLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.3, 0.3, 0.35, 1)
theme_override_font_sizes/font_size = 20
text = "Day 1 - Workspace"

[node name="StatusLabel" type="Label" parent="UI"]
offset_left = 1080.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.4, 0.4, 0.45, 1)
theme_override_font_sizes/font_size = 16
text = "Work: Incomplete"
horizontal_alignment = 2

[node name="DialogueBox" type="Panel" parent="UI"]
visible = false
offset_left = 140.0
offset_top = 100.0
offset_right = 1140.0
offset_bottom = 250.0

[node name="DialogueText" type="Label" parent="UI/DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Manager dialogue here..."
autowrap_mode = 2
